tests/expected_invalid_foreign_body.diag.out
<input>:2:33: error: foreign functions may not define a body
    public foreign fn test() -> Int {
                                    ^
